<resources>
    <string name="app_name">TheLibraryApp</string>
    <string name="add_book">Add Book</string>
    <string name="remove_books">Remove Books</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="checkout_date">Checkout Date</string>
    <string name="tags">Tags</string>
    <string name="publisher">Publisher</string>
    <string name="checkout">Checkout</string>
    <string name="categories">Categories</string>
    <string name="submit">Submit</string>
    <string name="enter_name">Enter Name</string>
    <string name="delete_book">Delete</string>
    <string name="do_you_want_to_delete_this_book">Do You Want To Delete This Book?</string>
    <string name="delete">Delete</string>
    <string name="delete_all_books">Delete All Books</string>
    <string name="do_you_want_to_delete_all_books">Do You Want To Delete All Books?</string>
    <string name="cancel">Cancel</string>
</resources>
